Blocks as components

--- a/app/src/main/res/layout/block_view.xml
+++ b/app/src/main/res/layout/block_view.xml
@@ -3,13 +3,13 @@
 
     <TextView
         android:id="@+id/blockNumber"
-        android:background="@android:color/holo_blue_bright"
+        android:background="@android:color/holo_blue_dark"
         android:textColor="@android:color/white"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="1200dp"
+        android:layout_height="120dp"
         android:textSize="24sp"
-        android:text="7"
-        android:layout_gravity="center"
-        android:gravity="center"/>
+        android:text="A"
+        android:gravity="center"
+        android:layout_gravity="center"/>
 
 </merge>
