--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.strongit.game15.MainActivity">
+    tools:context="ru.strongit.game15.ui.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,12 +14,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <ru.strongit.game15.ui.Game
+    <ru.strongit.game15.components.Game
         android:id="@+id/field"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
+
+        android:layout_height="200dp"
+        android:layout_width="200dp"
         >
-        <ru.strongit.game15.ui.Block
+        <!--ru.strongit.game15.components.Block
             android:id="@+id/k07"
             android:background="@android:color/holo_blue_dark"
             android:textColor="@android:color/white"
@@ -28,8 +29,8 @@
             android:textSize="24sp"
             android:text="7"
             android:layout_gravity="center"
-            android:gravity="center"/>
-    </ru.strongit.game15.ui.Game>
+            android:gravity="center"/-->
+    </ru.strongit.game15.components.Game>
 
 
 </android.support.constraint.ConstraintLayout>
